--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,13 @@ override.tf.json
 # !example_override.tf
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-# example: *tfplan*
+# example: 
+*tfplan*
+
+*.lock.hcl
+.terraform
+*.tfstate*
+*.backup
+*.cfg
+*.tfvars
+secret*
